JAVA-36248 :- Add new URI fix for second batch of modules.